# ole-rs

./: .gitignore  Cargo.toml  README.md
src/: bup_utils.rs  constants.rs  error.rs  file_typer.rs  lib.rs  main.rs
src/encryption/: excel.rs  mod.rs  ooxml.rs  powerpoint.rs  word.rs
