[package]
name = "ole-rs"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
derivative = "2.2"
epochs = "0.2"
lazy_static = "1.4"
packed_struct = "0.10"
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"